[package]
name = "entrypoint"
description = "opinionated application framework/wrapper that eliminates main function boilerplate"
authors = ["melloyawn <contact@melloyawn.com>"]
version = "0.1.3"
edition = "2021"
license = "MIT"

homepage = "https://github.com/melloyawn/entrypoint"
repository = "https://github.com/melloyawn/entrypoint"

categories = [
    "command-line-interface",
    "config",
    "rust-patterns",
]

keywords = [
    "application",
    "boilerplate",
    "config",
    "entrypoint",
]

[features]
default = ["macros"]
macros = ["dep:entrypoint_macros"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["env", "derive"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"

entrypoint_macros = { version = "0.1.3", path = "../entrypoint_macros", optional = true }

[dev-dependencies]
axum = "0.7.2"
tokio = { version = "1.0", features = ["full"] }
