[package]
name = "entrypoint_macros"
description = "macros for entrypoint"
version = "0.1.1"
edition = "2021"
license = "MIT"

homepage = "https://github.com/melloyawn/entrypoint"
repository = "https://github.com/melloyawn/entrypoint"

categories = [
    "command-line-interface",
    "config",
    "rust-patterns",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
