[package]
name = "entrypoint_macros"
description = "macros for entrypoint"
authors = ["melloyawn <contact@melloyawn.com>"]
version = "0.1.3"
edition = "2021"
license = "MIT"

homepage = "https://github.com/melloyawn/entrypoint"
repository = "https://github.com/melloyawn/entrypoint"

categories = [
    "command-line-interface",
    "config",
    "no-std",
    "rust-patterns",
]

keywords = [
    "derive",
    "entrypoint",
    "entrypoint_macros",
    "macro",
    "macros",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"

[dev-dependencies]
entrypoint  = { path = "../entrypoint" }
